added nativescript themes

--- a/nativescript/package.json
+++ b/nativescript/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "mdc-theme",
+    "name": "nativescript-theme",
     "version": "2.2.0",
     "private": true,
     "dependencies": {},
