--- a/react/package.json
+++ b/react/package.json
@@ -7,6 +7,9 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "babel src --presets babel-preset-env --out-dir dist"
   },
+  "dependencies": {
+    "@pxblue/colors": "^1.0.1"
+  },
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-preset-env": "^1.7.0"
