add npm install to script

--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build:react": "cd ../react && babel src --presets babel-preset-env --out-dir dist && cd ..",
-    "build:react-native": "cd react-native && babel src --presets babel-preset-env --out-dir dist && cd ..",
+    "build:react": "cd ../react && npm install && babel src --presets babel-preset-env --out-dir dist && cd ..",
+    "build:react-native": "cd react-native && npm install && babel src --presets babel-preset-env --out-dir dist && cd ..",
     "build:all": "npm run build:react && npm run build:react-native",
     "publish:full": "npm run build:all && npm version patch && npm publish"
   },
