--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "lighting"
   ],
   "author": "px-blue <pxblue@eaton.com>",
-  "license": "MIT",
+  "license": "BSD-3-Clause",
   "bugs": {
     "url": "https://github.com/pxblue/themes/issues"
   },
