--- a/react-native/package.json
+++ b/react-native/package.json
@@ -5,7 +5,7 @@
   "main": "./dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "babel src --presets babel-preset-env --out-dir dist"
+    "build": "npm install && babel src --presets babel-preset-env --out-dir dist"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
