update typeface dependency

--- a/package.json
+++ b/package.json
@@ -30,9 +30,7 @@
   },
   "homepage": "https://github.com/pxblue/themes#readme",
   "dependencies": {
-    "@pxblue/colors": "^1.0.1"
-  },
-  "peerDependencies": {
+    "@pxblue/colors": "^1.0.1",
     "typeface-open-sans": "^0.0.54"
   }
 }
