--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,7 @@
 # dependencies
 /node_modules
 **/**/node_modules
-package-lock.json
-**/**/yarn.lock
+**/**/package-lock.json
 
 # testing
 /coverage
