--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "test": "./buildTest.sh",
     "build:react": "cd react && yarn build && cd ..",
-    "build:react-native": "cd react-native && yarn build && cd ..",
-    "build:all": "yarn build:react && yarn build:react-native",
+    "build:all": "yarn build:react",
     "publish:full": "yarn build:all && npm version patch && npm publish",
     "prepublish": "yarn test"
   },
