--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,8 +9,7 @@ jobs:
           name: Install Dependencies
           command: |
             yarn
-            cd react && yarn
-            cd ..
+            cd react && yarn && cd ..
       - run:
           name: Build Package
           command: yarn build:all
