--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,9 +7,7 @@ jobs:
       - checkout
       - run: 
           name: Install Dependencies
-          command: |
-            yarn
-            cd react && yarn && cd ..
+          command: yarn && cd react && yarn && cd ..
       - run:
           name: Build Package
           command: yarn build:all
