--- a/angular.json
+++ b/angular.json
@@ -74,7 +74,9 @@
             "tsConfig": "src/tsconfig.spec.json",
             "karmaConfig": "src/karma.conf.js",
             "styles": [
-              "styles.css"
+              "./node_modules/@pxblue/themes/angular/theme.scss",
+              "./node_modules/typeface-open-sans",
+              "src/styles.scss"
             ],
             "scripts": [],
             "assets": [
