--- a/angular/package.json
+++ b/angular/package.json
@@ -1,10 +1,69 @@
 {
-    "name": "angular-theme",
-    "version": "2.2.0",
+  "name": "@pxblue/themes",
+  "version": "2.1.0",
+  "description": "PXBlue themes for Eaton applications",
+  "scripts": {
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/pxblue/themes.git"
+  },
+  "keywords": [
+    "PXBlue",
+    "themes",
+    "Eaton",
+    "Power",
+    "Xpert",
+    "quality",
+    "lighting"
+  ],
+  "author": "px-blue <pxblue@eaton.com>",
+  "license": "BSD-3-Clause",
+  "bugs": {
+    "url": "https://github.com/pxblue/themes/issues"
+  },
+  "homepage": "https://github.com/pxblue/themes#readme",
     "private": true,
     "dependencies": {
-        "@pxblue/colors": "^1.0.1"
+        "@angular/animations": "~8.2.0",
+        "@angular/cdk": "8.1.3",
+        "@angular/common": "~8.2.0",
+        "@angular/compiler": "~8.2.0",
+        "@angular/core": "~8.2.0",
+        "@angular/forms": "~8.2.0",
+        "@angular/flex-layout": "8.0.0-beta.26",
+        "@angular/material": "8.1.3",
+        "@angular/platform-browser": "~8.2.0",
+        "@angular/platform-browser-dynamic": "~8.2.0",
+        "@angular/router": "~8.2.0",
+        "@pxblue/angular-components": "1.1.1",
+        "@pxblue/colors": "1.0.13",
+        "@pxblue/ng-progress-icons": "1.1.4",
+        "@pxblue/themes": "2.1.0",
+        "rxjs": "~6.4.0",
+        "tslib": "^1.10.0",
+        "typeface-open-sans": "^0.0.75",
+        "zone.js": "~0.9.1"
     },
-    "scripts": {}
+    "devDependencies": {
+        "@angular-devkit/build-angular": "~0.802.2",
+        "@angular/cli": "~8.2.2",
+        "@angular/compiler-cli": "~8.2.0",
+        "@angular/language-service": "~8.2.0",
+        "@types/node": "~8.9.4",
+        "@types/jasmine": "~3.3.8",
+        "@types/jasminewd2": "~2.0.3",
+        "codelyzer": "^5.0.0",
+        "jasmine-core": "~3.4.0",
+        "jasmine-spec-reporter": "~4.2.1",
+        "karma": "~4.1.0",
+        "karma-chrome-launcher": "~2.2.0",
+        "karma-coverage-istanbul-reporter": "~2.0.1",
+        "karma-jasmine": "~2.0.1",
+        "karma-jasmine-html-reporter": "^1.4.0",
+        "protractor": "~5.4.0",
+        "ts-node": "~7.0.0",
+        "tslint": "~5.15.0",
+        "typescript": "~3.5.3"
+    }
 }
-  
