--- a/angular/angular.json
+++ b/angular/angular.json
@@ -46,6 +46,9 @@
               "extractLicenses": true,
               "vendorChunk": false,
               "buildOptimizer": true
+            },
+            "es5": {
+              "tsConfig": "./tsconfig.es5.json"
             }
           }
         },
@@ -57,6 +60,9 @@
           "configurations": {
             "production": {
               "browserTarget": "demo:build:production"
+            },
+            "es5": {
+              "browserTarget": "demo:build:es5"
             }
           }
         },
