--- a/react/package.json
+++ b/react/package.json
@@ -5,7 +5,9 @@
   "main": "./dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "yarn && babel src --presets babel-preset-env --out-dir dist"
+    "build": "yarn && babel src --presets babel-preset-env --out-dir dist",
+    "link:themes": "bash ./linkThemes.sh",
+    "start": "cd demo && yarn && cd .. && yarn link:themes && cd demo && yarn start"
   },
   "dependencies": {
     "@pxblue/colors": "^1.0.1"
