--- a/.gitignore
+++ b/.gitignore
@@ -18,7 +18,8 @@ Thumbs.db
 .env.development.local
 .env.test.local
 .env.production.local
-.idea
+.idea/
+.icon/
 
 npm-debug.log*
 yarn-debug.log*
