--- a/angular/demo/package.json
+++ b/angular/demo/package.json
@@ -25,6 +25,7 @@
         "@pxblue/colors": "1.0.13",
         "@pxblue/ng-progress-icons": "1.1.4",
         "@pxblue/themes": "2.1.0",
+        "core-js": "^2.0.0",
         "rxjs": "~6.4.0",
         "tslib": "^1.10.0",
         "typeface-open-sans": "^0.0.75",
