--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,8 @@
 /node_modules
 **/**/node_modules
 **/**/package-lock.json
-
+**/**/**/node_modules
+**/**/**/package-lock.json
 # testing
 /coverage
 
