Changed name of the demo package.json

--- a/angular/demo/package.json
+++ b/angular/demo/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "angular-theme",
+    "name": "pxb-theme-demo-angular",
     "version": "2.1.0",
     "description": "Angular themes for Eaton applications",
     "scripts": {
