--- a/angular/package.json
+++ b/angular/package.json
@@ -1,9 +1,12 @@
 {
-  "name": "angular-theme",
-  "version": "2.2.0",
-  "description": "Angular themes for PX Blue applications",
-  "dependencies": {
-    "@angular/material": "8.1.3",
-    "@pxblue/colors": "^1.0.1"
-  }
+    "name": "angular-theme",
+    "version": "2.2.0",
+    "description": "Angular themes for PX Blue applications",
+    "dependencies": {
+        "@angular/material": "8.1.3",
+        "@pxblue/colors": "^1.0.1"
+    },
+    "scripts": {
+        "start": "cd demo && ng serve --configuration es5"
+    }
 }
