--- a/react/package.json
+++ b/react/package.json
@@ -6,15 +6,11 @@
   "main": "./dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "yarn && babel src --presets babel-preset-env --out-dir dist",
+    "build": "yarn && tsc",
     "link:themes": "bash ./linkThemes.sh",
     "start": "cd demo && yarn && cd .. && yarn link:themes && cd demo && yarn start"
   },
   "dependencies": {
     "@pxblue/colors": "^1.0.1"
-  },
-  "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-preset-env": "^1.7.0"
   }
 }
