--- a/react/tsconfig.json
+++ b/react/tsconfig.json
@@ -4,9 +4,13 @@
         "module": "commonjs",
         "declaration": true,
         "outDir": "dist",
-        "strict": true
+        "strict": true,
+        "lib": ["es2015", "dom"]
     },
     "include": [
         "src/*"
+    ],
+    "exclude": [
+        "node_modules"
     ]
 }
