--- a/react/package.json
+++ b/react/package.json
@@ -11,10 +11,10 @@
         "start": "cd demo && yarn && cd .. && yarn link:themes && cd demo && yarn start"
     },
     "dependencies": {
-        "@pxblue/colors": "^1.0.1",
-        "@types/material-ui": "^0.21.7"
+        "@pxblue/colors": "^1.0.1"
     },
     "devDependencies": {
-        "typescript": "^3.7.2"
+        "typescript": "^3.7.2",
+        "@material-ui/core": "^4.0.0"
     }
 }
