--- a/react/package.json
+++ b/react/package.json
@@ -13,8 +13,11 @@
     "dependencies": {
         "@pxblue/colors": "^1.0.1"
     },
+    "peerDependencies": {
+        "@material-ui/icons": ">=3.0.0"
+    },
     "devDependencies": {
-        "typescript": "^3.7.2",
-        "@material-ui/core": "^4.0.0"
+        "@material-ui/core": ">=3.0.0",
+        "typescript": "^3.7.2"
     }
 }
