--- a/react-native/tsconfig.json
+++ b/react-native/tsconfig.json
@@ -4,9 +4,10 @@
         "module": "commonjs",
         "declaration": true,
         "outDir": "dist",
-        "strict": true
+        "strict": true,
+        "skipLibCheck": true
     },
     "include": [
         "src/*"
-    ]
+    ],
 }
