--- a/react-native/package.json
+++ b/react-native/package.json
@@ -11,11 +11,13 @@
     "start": "cd demo && yarn && cd .. && yarn link:themes && cd demo && yarn start"
   },
   "dependencies": {
-    "@pxblue/colors": "^2.0.0",
-    "@types/react-native": "^0.60.30",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz"
+    "@pxblue/colors": "^2.0.0"
   },
   "devDependencies": {
-    "typescript": "^3.7.2"
+    "typescript": "^3.7.2",
+    "@pxblue/react-native-components": "^2.0.2"
+  },
+  "peerDependencies": {
+    "@pxblue/react-native-components": "^2.0.2"
   }
 }
