try to convert index.js to index.ts to preserve types

--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
     "license": "BSD-3-Clause",
     "version": "3.0.0",
     "description": "PXBlue themes for Eaton applications",
-    "main": "index.js",
+    "main": "dist/index.js",
     "scripts": {
         "test": "./buildTest.sh",
+        "build:index": "yarn && tsc",
         "build:react": "cd react && yarn build && cd ..",
         "build:react-native": "cd react-native && yarn build && cd ..",
-        "build:all": "yarn build:react && yarn build:react-native",
+        "build:all": "yarn build:react && yarn build:react-native && yarn build:index",
         "publish:full": "yarn build:all && npm version patch && npm publish",
         "link:angular": "cd angular && yarn link:themes",
         "start:angular": "cd angular && yarn start",
@@ -38,6 +39,9 @@
     "dependencies": {
         "@pxblue/colors": "^2.0.0",
         "typeface-open-sans": "^0.0.54"
+    },
+    "devDependencies": {
+        "typescript": "^3.7.2"
     },
     "files": [
         "package.json",
