add more excludes

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,8 @@
         "skipLibCheck": true
     },
     "exclude": [
-        "/node_modules"
+        "/node_modules",
+        "/react",
+        "/react-native"
     ],
 }
