--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,7 @@
     "exclude": [
         "/node_modules",
         "/react",
-        "/react-native"
+        "/react-native",
+        "/angular"
     ],
 }
