--- a/react/tsconfig.json
+++ b/react/tsconfig.json
@@ -5,7 +5,8 @@
         "declaration": true,
         "outDir": "dist",
         "strict": true,
-        "lib": ["es2015", "dom"]
+        "lib": ["es2015", "dom"],
+        "skipLibCheck": true
     },
     "include": [
         "src/*"
