--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,14 +3,11 @@
         "target": "es5",
         "module": "commonjs",
         "declaration": true,
-        "outDir": "dist",
+        "outDir": "./",
         "strict": true,
         "skipLibCheck": true
     },
-    "exclude": [
-        "/node_modules",
-        "/react",
-        "/react-native",
-        "/angular"
-    ],
+    "files": [
+        "index.ts"
+    ]
 }
