--- a/storybook/package.json
+++ b/storybook/package.json
@@ -1,7 +1,9 @@
 {
-  "name": "@pxblue/storybook-theme",
-  "version": "0.0.1",
-  "description": "Theme used within Storybook component demos",
+  "name": "@pxblue/storybook-themes",
+  "author": "PX Blue <pxblue@eaton.com>",
+  "license": "BSD-3-Clause",
+  "version": "1.0.0",
+  "description": "Storybook theme for PX Blue documentation",
   "main": "index.js",
   "types": "index.d.ts",
   "scripts": {
@@ -9,15 +11,17 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/pxblue/storybook-theme"
+    "url": "git+https://github.com/pxblue/themes.git"
   },
+  "bugs": {
+    "url": "https://github.com/pxblue/themes/issues"
+  },
+  "homepage": "https://github.com/pxblue/themes/tree/master/storybook",
   "keywords": [
     "storybook",
     "theme",
     "pxblue"
   ],
-  "author": "Power Xpert Blue <pxblue@eaton.com> (https://github.com/pxblue)",
-  "license": "BSD-3-Clause",
   "devDependencies": {
     "@pxblue/colors": "^2.0.0",
     "@storybook/theming": "^5.3.13"
@@ -25,5 +29,13 @@
   "peerDependencies": {
     "@pxblue/colors": "^2.0.0",
     "@storybook/theming": "^5.3.13"
-  }
+  },
+  "files": [
+      "package.json",
+      "README.md",
+      "LICENSE",
+      "CHANGELOG.md",
+      "index.js",
+      "index.d.ts"
+  ]
 }
