--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,6 @@
 # See https://help.github.com/ignore-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
 **/**/node_modules
 **/**/package-lock.json
 
@@ -12,15 +11,15 @@
 /build
 
 # misc
-.DS_Store
-Thumbs.db
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-.idea/
-.icon/
+**/**/.DS_Store
+**/**/Thumbs.db
+**/**/.env.local
+**/**/.env.development.local
+**/**/.env.test.local
+**/**/.env.production.local
+**/**/.idea/
+**/**/.icon/
 
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+**/**/npm-debug.log*
+**/**/yarn-debug.log*
+**/**/yarn-error.log*
