--- a/storybook/package.json
+++ b/storybook/package.json
@@ -7,7 +7,8 @@
   "main": "index.js",
   "types": "index.d.ts",
   "scripts": {
-    "build": "tsc"
+    "build": "tsc",
+    "test": "bash ./scripts/buildTest.sh"
   },
   "repository": {
     "type": "git",
