--- a/react/package.json
+++ b/react/package.json
@@ -29,7 +29,8 @@
         "React"
     ],
     "dependencies": {
-        "@pxblue/colors": "^2.0.0"
+        "@pxblue/colors": "^2.0.0",
+        "typeface-open-sans": "^0.0.75"
     },
     "devDependencies": {
         "@material-ui/core": ">=3.0.0",
