--- a/angular/demo/package.json
+++ b/angular/demo/package.json
@@ -24,7 +24,7 @@
         "@pxblue/angular-components": "1.1.1",
         "@pxblue/colors": "1.0.13",
         "@pxblue/ng-progress-icons": "1.1.4",
-        "@pxblue/angular-themes": "^4.0.0",
+        "@pxblue/angular-themes": "latest",
         "core-js": "^2.0.0",
         "rxjs": "~6.4.0",
         "tslib": "^1.10.0",
