--- a/react/package.json
+++ b/react/package.json
@@ -9,8 +9,7 @@
         "start": "yarn build && cd demo && yarn && cd .. && yarn link:themes && cd demo && yarn start",
         "build": "yarn && tsc",
         "link:themes": "bash ./scripts/linkThemes.sh",
-        "test": "bash ./scripts/buildTest.sh",
-        "prepublish": "yarn test"
+        "test": "bash ./scripts/buildTest.sh"
     },
     "repository": {
         "type": "git",
