Update readme, changelog, and demo versions

--- a/react/demo/package.json
+++ b/react/demo/package.json
@@ -4,13 +4,13 @@
   "author": "PX Blue <pxblue@eaton.com>",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "4.8.3",
-    "@material-ui/icons": "4.2.1",
-    "@material-ui/styles": "4.3.0",
-    "@pxblue/colors": "1.0.13",
-    "@pxblue/icons-mui": "1.0.18",
-    "@pxblue/react-components": "1.0.1",
-    "@pxblue/react-progress-icons": "1.0.7",
+    "@material-ui/core": "^4.8.3",
+    "@material-ui/icons": "^4.2.1",
+    "@material-ui/styles": "^4.3.0",
+    "@pxblue/colors": "^2.0.0",
+    "@pxblue/icons-mui": "^1.0.18",
+    "@pxblue/react-components": "^3.0.2",
+    "@pxblue/react-progress-icons": "^1.0.7",
     "@pxblue/react-themes": "latest",
     "prop-types": "15.7.2",
     "react": "^16.9.0",
