--- a/angular/package.json
+++ b/angular/package.json
@@ -8,7 +8,8 @@
         "start": "cd demo && yarn && cd .. && yarn link:themes && cd demo && yarn start",
         "link:themes": "bash ./scripts/linkThemes.sh",
         "test": "bash ./scripts/buildTest.sh",
-        "prettier": "prettier \"*.scss\" --write"
+        "prettier": "prettier \"*.scss\" --write",
+        "build": "sass _darkTheme.scss "
     },
     "repository": {
         "type": "git",
@@ -41,7 +42,8 @@
     "devDependencies": {
         "@angular/material": "^8.2.0",
         "@pxblue/prettier-config": "^1.0.2",
-        "prettier": "^2.0.4"
+        "prettier": "^2.0.4",
+        "sass": "^1.26.8"
     },
     "peerDependencies": {
         "@angular/material": "^8.2.0"
