--- a/react/demo/package.json
+++ b/react/demo/package.json
@@ -17,7 +17,7 @@
         "react-app-polyfill": "^1.0.2",
         "react-dom": "^16.9.0",
         "react-router": "^5.0.1",
-        "react-router-dom": "5.0.1",
+        "react-router-dom": "^5.0.1",
         "typeface-open-sans": "0.0.75"
     },
     "devDependencies": {
