--- a/angular/demo/package.json
+++ b/angular/demo/package.json
@@ -21,7 +21,7 @@
         "@angular/platform-browser": "~8.2.0",
         "@angular/platform-browser-dynamic": "~8.2.0",
         "@angular/router": "~8.2.0",
-        "@pxblue/angular-components": "1.3.0",
+        "@pxblue/angular-components": "2.0.0-beta.9",
         "@pxblue/colors": "3.0.0",
         "@pxblue/ng-progress-icons": "1.1.4",
         "@pxblue/angular-themes": "latest",
