--- a/angular/demo/package.json
+++ b/angular/demo/package.json
@@ -24,7 +24,7 @@
         "@pxblue/angular-components": "2.0.0-beta.9",
         "@pxblue/colors": "3.0.0",
         "@pxblue/ng-progress-icons": "1.1.4",
-        "@pxblue/angular-themes": "^5.0.0-beta.8",
+        "@pxblue/angular-themes": "latest",
         "core-js": "^2.0.0",
         "rxjs": "~6.4.0",
         "tslib": "^1.10.0",
