--- a/angular/package.json
+++ b/angular/package.json
@@ -40,12 +40,12 @@
         "typeface-open-sans": "^0.0.75"
     },
     "devDependencies": {
-        "@angular/material": "^8.2.0",
+        "@angular/material": ">=8.2.0",
         "@pxblue/prettier-config": "^1.0.2",
         "prettier": "^2.0.4",
         "sass": "^1.26.8"
     },
     "peerDependencies": {
-        "@angular/material": "^8.2.0"
+        "@angular/material": ">=8.2.0"
     }
 }
