--- a/angular/package.json
+++ b/angular/package.json
@@ -8,7 +8,7 @@
         "start": "cd demo && yarn && cd .. && yarn link:themes && cd demo && yarn start",
         "link:themes": "bash ./scripts/linkThemes.sh",
         "test": "bash ./scripts/buildTest.sh",
-        "prettier": "prettier \"*.scss\" --write"
+        "prettier": "prettier \"*.{scss,md}\" --write"
     },
     "repository": {
         "type": "git",
