--- a/react/package.json
+++ b/react/package.json
@@ -6,7 +6,7 @@
     "description": "React themes for PX Blue applications",
     "main": "./dist/index.js",
     "scripts": {
-        "start": "yarn build && cd demo && yarn && cd .. && yarn link:themes && cd demo && yarn start",
+        "start": "yarn build && cd demos/theme && yarn && cd ../.. && yarn link:themes && cd demos/theme && yarn start",
         "build": "yarn && tsc",
         "link:themes": "bash ./scripts/linkThemes.sh",
         "test": "bash ./scripts/buildTest.sh"
