--- a/react/package.json
+++ b/react/package.json
@@ -6,7 +6,10 @@
     "description": "React themes for PX Blue applications",
     "main": "./dist/index.js",
     "scripts": {
+        "initialize": "bash scripts/initializeSubmodule.sh",
+        "install:dependencies": "cd demos/showcase && yarn && cd ../..",
         "start": "yarn build && cd demos/theme && yarn && cd ../.. && yarn link:themes && cd demos/theme && yarn start",
+        "start:showcase": "yarn initialize && yarn install:dependencies && yarn build && yarn link:themes && cd demos/showcase && yarn start",
         "build": "yarn && tsc",
         "link:themes": "bash ./scripts/linkThemes.sh",
         "test": "bash ./scripts/buildTest.sh"
