--- a/react/package.json
+++ b/react/package.json
@@ -7,9 +7,9 @@
     "main": "./dist/index.js",
     "scripts": {
         "initialize": "bash scripts/initializeSubmodule.sh",
-        "install:dependencies": "cd demos/showcase && yarn && cd ../..",
-        "start": "yarn build && cd demos/theme && yarn && cd ../.. && yarn link:themes && cd demos/theme && yarn start",
-        "start:showcase": "yarn initialize && yarn install:dependencies && yarn build && yarn link:themes && cd demos/showcase && yarn start",
+        "install:dependencies": "cd demos/showcase && yarn && cd ../theme && yarn && cd ../..",
+        "start": "yarn install:dependencies && yarn link:themes && cd demos/theme && yarn start",
+        "start:showcase": "yarn initialize && yarn install:dependencies && yarn link:themes && cd demos/showcase && yarn start",
         "build": "yarn && tsc",
         "link:themes": "bash ./scripts/linkThemes.sh",
         "test": "bash ./scripts/buildTest.sh"
