--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,7 @@
 	path = react/demos/showcase
 	url = https://github.com/pxblue/react-showcase-demo
 	branch = dev
+[submodule "angular/demos/showcase"]
+	path = angular/demos/showcase
+	url = https://github.com/pxblue/angular-showcase-demo
+	branch = dev
