--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
         "start:react": "cd react && yarn start",
         "start:react-native": "cd react && yarn start",
         "prettier": "prettier \"**/**.{ts,tsx,js,jsx,json,css,scss,html,md}\" --write",
-        "prettier:check": "prettier \"**/**.{ts,tsx,js,jsx,json,css,scss,html,md}\" --check"
+        "prettier:check": "prettier \"**/**.{ts,tsx,js,jsx,json,css,scss,html,md}\" --check",
+        "update:submodule": "git submodule update --remote"
     },
     "prettier": "@pxblue/prettier-config",
     "repository": {
