--- a/angular/demos/theme/package.json
+++ b/angular/demos/theme/package.json
@@ -22,9 +22,9 @@
         "@angular/platform-browser-dynamic": "~8.2.0",
         "@angular/router": "~8.2.0",
         "@pxblue/angular-components": "2.0.0-beta.9",
+        "@pxblue/angular-themes": "^5.1.1",
         "@pxblue/colors": "^3.0.0",
         "@pxblue/ng-progress-icons": "1.1.4",
-        "@pxblue/angular-themes": "latest",
         "core-js": "^2.0.0",
         "rxjs": "~6.4.0",
         "tslib": "^1.10.0",
