--- a/angular/demos/theme/package.json
+++ b/angular/demos/theme/package.json
@@ -50,6 +50,7 @@
         "protractor": "~5.4.0",
         "ts-node": "~7.0.0",
         "tslint": "~5.15.0",
-        "typescript": "~3.5.3"
+        "typescript": "~3.5.3",
+        "yarn-audit-fix": "^3.2.7"
     }
 }
