Rename demo folder

--- a/.gitmodules
+++ b/.gitmodules
@@ -2,6 +2,6 @@
 	path = react/demos/showcase
 	url = https://github.com/pxblue/react-showcase-demo
 	branch = dev
-[submodule "angular/angular-showcase-demo"]
-	path = angular/angular-showcase-demo
+[submodule "angular/showcase"]
+	path = angular/showcase
 	url = https://github.com/pxblue/angular-showcase-demo
