--- a/.gitmodules
+++ b/.gitmodules
@@ -6,3 +6,7 @@
 	path = angular/demos/showcase
 	url = https://github.com/pxblue/angular-showcase-demo
 	branch = dev
+[submodule "react-native/demos/showcase"]
+	path = react-native/demos/showcase
+	url = https://github.com/pxblue/react-native-showcase-demo
+	branch = dev
