--- a/react-native/package.json
+++ b/react-native/package.json
@@ -6,7 +6,13 @@
     "description": "React Native themes for PX Blue applications",
     "main": "./dist/index.js",
     "scripts": {
-        "start": "echo \"Error: no demo yet\" && exit 1",
+        "initialize": "bash scripts/initializeSubmodule.sh",
+        "install:showcase-ios": "cd demos/showcase && yarn && cd ios && pod install && cd ../../.. && yarn link:themes",
+        "install:showcase-android": "cd demos/showcase && yarn && cd ../.. && yarn link:components",	        
+        "start": "yarn start:showcase",
+        "start:showcase": "yarn initialize && yarn start:showcase-ios",
+        "start:showcase-ios": "yarn initialize && yarn install:showcase-ios && cd demos/showcase && yarn ios",
+        "start:showcase-android": "yarn initialize && yarn install:showcase-android && cd demos/showcase && yarn android",
         "build": "yarn && tsc",
         "link:themes": "bash ./scripts/linkThemes.sh",
         "test": "bash ./scripts/buildTest.sh"
