--- a/react-native/package.json
+++ b/react-native/package.json
@@ -2,7 +2,7 @@
     "name": "@pxblue/react-native-themes",
     "author": "PX Blue <pxblue@eaton.com>",
     "license": "BSD-3-Clause",
-    "version": "5.0.1-beta.0",
+    "version": "5.0.1",
     "description": "React Native themes for PX Blue applications",
     "main": "./dist/index.js",
     "scripts": {
