--- a/react/demos/theme/package.json
+++ b/react/demos/theme/package.json
@@ -18,7 +18,7 @@
         "react-dom": "^16.9.0",
         "react-router": "^5.0.1",
         "react-router-dom": "^5.0.1",
-        "typeface-open-sans": "0.0.75"
+        "@fontsource/open-sans": "^4.1.0"
     },
     "devDependencies": {
         "react-scripts": "3.1.1"
