--- a/react/package.json
+++ b/react/package.json
@@ -2,7 +2,7 @@
     "name": "@pxblue/react-themes",
     "author": "PX Blue <pxblue@eaton.com>",
     "license": "BSD-3-Clause",
-    "version": "5.0.3",
+    "version": "6.0.0-beta.0",
     "description": "React themes for PX Blue applications",
     "main": "./dist/index.js",
     "scripts": {
@@ -32,7 +32,7 @@
     ],
     "dependencies": {
         "@pxblue/colors": "^3.0.0",
-        "typeface-open-sans": "^0.0.75"
+        "@fontsource/open-sans": "^4.1.0"
     },
     "peerDependencies": {
         "@material-ui/core": "^4.0.0"
