--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
         "build:react-native": "cd react-native && yarn build && cd ..",
         "start:angular": "cd angular && yarn start",
         "start:react": "cd react && yarn start",
-        "start:react-native": "cd react && yarn start",
+        "start:react-native": "cd react-native && yarn start",
         "prettier": "prettier \"**/**.{ts,tsx,js,jsx,json,css,scss,html,md}\" --write",
         "prettier:check": "prettier \"**/**.{ts,tsx,js,jsx,json,css,scss,html,md}\" --check",
         "update:submodule": "git submodule update --remote"
