--- a/angular/package.json
+++ b/angular/package.json
@@ -2,7 +2,7 @@
     "name": "@pxblue/angular-themes",
     "author": "PX Blue <pxblue@eaton.com>",
     "license": "BSD-3-Clause",
-    "version": "6.0.0-beta.0",
+    "version": "5.2.1-beta.0",
     "description": "Angular themes for PX Blue applications",
     "scripts": {
         "initialize": "bash scripts/initializeSubmodule.sh",
@@ -39,7 +39,7 @@
     ],
     "dependencies": {
         "@pxblue/colors": "^3.0.0",
-        "@fontsource/open-sans": "^4.1.0"
+        "typeface-open-sans": "^0.0.75"
     },
     "devDependencies": {
         "@angular/material": ">=8.2.0",
