--- a/react/tsconfig.json
+++ b/react/tsconfig.json
@@ -6,6 +6,7 @@
         "outDir": "dist",
         "strict": true,
         "lib": ["es2015", "dom"],
+        "esModuleInterop": true,
         "skipLibCheck": true
     },
     "include": ["src/*", "package.json"],
