Add button and tab mixin

--- a/angular/package.json
+++ b/angular/package.json
@@ -10,7 +10,7 @@
         "start": "yarn initialize && yarn install:dependencies && yarn link:themes && cd demos/showcase && yarn start",
         "link:themes": "bash ./scripts/linkThemes.sh",
         "test": "bash ./scripts/buildTest.sh",
-        "prettier": "prettier \"*.{css,scss,html,md}\" --write",
+        "prettier": "prettier \"**/**.{css,scss,html,md}\" --write",
         "precommit": "yarn initialize && yarn install:dependencies && yarn prettier && yarn test"
     },
     "repository": {
