--- a/react-native/package.json
+++ b/react-native/package.json
@@ -34,12 +34,14 @@
         "React Native"
     ],
     "dependencies": {
-        "@pxblue/colors": "^3.0.0"
+        "@pxblue/colors": "^3.0.0",
+        "color": "^3.1.3"
     },
     "peerDependencies": {
         "react-native-paper": "^3.0.0 || ^4.0.0"
     },
     "devDependencies": {
+        "@types/color": "^3.0.1",
         "react-native-paper": "^4.0.0",
         "typescript": "^3.7.2"
     },
