--- a/react-native/tsconfig.json
+++ b/react-native/tsconfig.json
@@ -5,7 +5,8 @@
         "declaration": true,
         "outDir": "dist",
         "strict": true,
-        "skipLibCheck": true
+        "skipLibCheck": true,
+        "esModuleInterop": true
     },
     "include": ["src/*"]
 }
