--- a/react/demos/theme/package.json
+++ b/react/demos/theme/package.json
@@ -11,7 +11,7 @@
         "@material-ui/styles": "^4.3.0",
         "@pxblue/colors": "^3.0.0",
         "@pxblue/icons-mui": "^1.0.18",
-        "@pxblue/react-components": "^5.0.0",
+        "@pxblue/react-components": "^5.0.1-beta.2",
         "@pxblue/react-progress-icons": "^1.0.7",
         "@pxblue/react-themes": "latest",
         "color": "^3.1.3",
