--- a/.gitmodules
+++ b/.gitmodules
@@ -1,11 +1,7 @@
 [submodule "react/demos/showcase"]
 	path = react/demos/showcase
 	url = https://github.com/pxblue/react-showcase-demo
-	branch = dev
-[submodule "angular/demos/showcase"]
-	path = angular/demos/showcase
-	url = https://github.com/pxblue/angular-showcase-demo
-	branch = dev
+	branch = master
 [submodule "react-native/demos/showcase"]
 	path = react-native/demos/showcase
 	url = https://github.com/pxblue/react-native-showcase-demo
