--- a/storybook/package.json
+++ b/storybook/package.json
@@ -7,7 +7,8 @@
     "main": "index.js",
     "types": "index.d.ts",
     "scripts": {
-        "test": "bash ./scripts/buildTest.sh"
+        "test": "bash ./scripts/buildTest.sh",
+        "publish:package": "bash ./scripts/publish.sh"
     },
     "repository": {
         "type": "git",
